projects/k8s/skaffold/manifest/nginx-stateful-set.yaml
---
# Persistent network identity
# For every pod in stateful set
apiVersion: v1
kind: Service
metadata:
  namespace: playground
  name: nginx-headless-svc
  labels:
    app: nginx
spec:
  ports:
    - port: 80
      name: web
  type: ClusterIP
  clusterIP: None
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: playground
  name: nginx-sts
spec:
  selector:
    matchLabels:
      app: nginx # has to match .spec.template.metadata.labels
  serviceName: nginx-headless-svc
  replicas: 3
  minReadySeconds: 1
  template:
    metadata:
      labels:
        app: nginx # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: nginx
          image: k8s.gcr.io/nginx-slim:0.8
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: www
              mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
    - metadata:
        name: www
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: fast
        resources:
          requests:
            storage: 600Mi
