projects/k8s/skaffold/manifest/http4s-ingress.yaml
# To deploy ingress-controller implementation pod
# minikube addons enable ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: playground
  name: http4s-ingress
spec:
  rules:
    # entry in /etc/hosts
    # with address from
    # kubectl get ingress -n playground
    - host: local.http4s.com
      http:
        paths:
          - path: /hello
            pathType: Exact
            backend:
              service:
                name: http4s-service
                port:
                  number: 8080
